# cmake_boilerplate

./: CMakeLists.txt
.cache/clangd/index/: hello_test.cpp.6A9FBBC189EBF5CC.idx  main.cpp.63AC966B2417D105.idx  square.cpp.A775C3020D2ABAD6.idx  square_test.cpp.A85D25CB15C38303.idx
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  hello_test.cpp  square_test.cpp
